# data-harness

./: .gitignore  404.html  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml  docs.yml  release-testpypi.yml  release.yml
api/agent/: index.html
api/cache/: index.html
api/exceptions/: index.html
api/harness/: index.html
api/providers/: index.html
api/streaming/: index.html
api/types/: index.html
blogs/: blog_architecture_v2.md  blog_cache.md
data_harness/: __init__.py  _sandbox_runner.py  agent.py  artifacts.py  cache.py  cli.py  exceptions.py  exec_cache.py  format.py  io.py  logger.py  loop.py  mcp.py  notebook.py  observe.py  pandas.py  quickstart.py  result.py  serialize.py  streaming.py  testing.py  types.py
data_harness/eval/: __init__.py  case.py  graders.py  pricing.py  report.py  runner.py  summary.py
data_harness/eval/suites/: __init__.py  bespoke.py  hard.py  large_data.py  messy.py  wikitablequestions.py
data_harness/providers/: anthropic.py  base.py  openai.py
data_harness/tools/: connectors.py  interpreter.py  planner.py  sandbox.py  sql.py  subagent.py  variables.py
dataact/: __init__.py  agent.py  cache.py  exceptions.py  format.py  logger.py  loop.py  observe.py  result.py  schema.py  serialize.py  testing.py  types.py
dataact/providers/: anthropic.py  base.py  openai.py
dataact/tools/: connectors.py  interpreter.py  planner.py  subagent.py  variables.py
docs/: index.md
docs/api/: agent.md  cache.md  exceptions.md  harness.md  providers.md  streaming.md  types.md
docs/guide/: asking.md  async.md  connectors.md  design.md  evaluation.md  examples.md  quickstart.md  sessions.md
evals/: summarize.py
evals/results/: README.md  SUMMARY.md  hard_20260625t081400.json  large_20260625t085451.json  messy_20260625t195251.json  wtq_20260625t215206.json
examples/: advanced_wiring.py  cache_benchmark.py  demo.ipynb  demo.py  eval_demo.py  eval_wtq.py  inspect_run.py  live_demo.py  mcp_demo.py  quickstart.py  streamlit_app.py
examples/data/: README.md  fred_unrate_2024.csv
guide/asking/: index.html
guide/async/: index.html
guide/connectors/: index.html
guide/design/: index.html
guide/evaluation/: index.html
guide/examples/: index.html
guide/quickstart/: index.html
guide/sessions/: index.html
plan/: PLAN_SDK.md  PLAN_TEACHING.md  PLAN_v1.md  PLAN_v2.md  PLAN_v3.md  PLAN_v4.md  PLAN_v5.md  TRACKER.md
search/: search_index.json
tests/: _smoke_dashboard.py  conftest.py  smoke_tests.py  test_agent.py  test_approval_and_cache.py  test_async_loop.py  test_cache.py  test_cache_extras.py  test_charts.py  test_cli.py  test_docs.py  test_docs_phase5.py  test_eval.py  test_format.py  test_gaps.py  test_integration.py  test_logger.py  test_loop.py  test_loop_reminders.py  test_mcp.py  test_observe.py  test_providers.py  test_providers_openai.py  test_quickstart.py  test_result.py  test_review_fixes.py  test_sandbox.py  test_schema.py  test_serialize.py  test_session_inspection.py  test_sql.py  test_streaming.py  test_testing.py  test_tool_annotations.py  test_tool_connectors.py  test_tool_interpreter.py  test_tool_planner.py  test_tool_subagent.py  test_tool_variables.py  test_turn_summary.py  (+1 more)
