[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dataact"
version = "0.1.3"
description = "Data agent with Python-native tools (no bash)"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Max Khor" },
]
requires-python = ">=3.10"
dependencies = [
    "anthropic",
    "loguru",
    "pandas",
    "numpy",
]

[project.optional-dependencies]
dev = [
    "openai",
    "pytest",
    "pytest-asyncio",
    "pytest-mock",
    "python-dotenv",
]
openai = [
    "openai",
]

[project.urls]
Homepage = "https://github.com/maxkskhor/data-harness"
Repository = "https://github.com/maxkskhor/data-harness"
Issues = "https://github.com/maxkskhor/data-harness/issues"

[tool.hatch.build.targets.wheel]
packages = ["dataact"]

[tool.uv]
dev-dependencies = [
    "openai",
    "pytest",
    "pytest-asyncio",
    "pytest-mock",
    "python-dotenv",
    "ruff",
]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.ruff.lint.per-file-ignores]
"tests/_smoke_dashboard.py" = ["E501"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "live: smoke tests that call real provider APIs (deselect with -m 'not live')",
]
